Add a correction to use readline library and start implement of the "cp" command

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ CFLAGS  += -g -m32
 BINDIR = $(ROOTDIR)/bin
 LIBDIR  = -L$(ROOTDIR)/lib
 INCDIR  = -I$(ROOTDIR)/include
-LIBS    = -lhardware
+LIBS    = -lhardware -lreadline
 
 ###------------------------------
 ### Main targets
